--- a/src/component/Footer/Footer.css
+++ b/src/component/Footer/Footer.css
@@ -1,73 +1,61 @@
 .footer-wrapper {
     background-color: #f5f5f7;
-    color: #86868b;
-    font-size: 12px;
-  }
-  .footer-wrapper ul {
-      list-style: none;
-      padding-bottom: 10px;
-      padding-inline-start: 0px;
-  }
-  .footer-wrapper ul a {
-      color: #515154;
-  }
-  .my-apple-wrapper {
-      padding-bottom: 15px;
-     margin-top: 10px;
-  }
-  .copyright {
-      margin-top: 15px;
-  }
-  .footer-country {
-      margin-top: 8px;
-  }
-  .flag-wrapper {
-      display: inline-block;
-      vertical-align: middle;
-      padding-right: 5px;
-  }
-  .footer-country-name{
-      display: inline-block;
-      vertical-align: middle;
-  }
-  .footer-links-terms ul {
-      display: flex;
-  }
-  .footer-links-terms ul li {
-      padding: 0 10px;
-      border-right: 1px solid #d2d2d7;
-  }
-  .footer-links-terms ul li:first-child {
-      padding-left: 0;
-  }
-  .footer-links-terms ul li:last-child {
-      border-right: 0;
-  }
-  
-  .footer-links-wrapper h3 {
-      font-size: 12px;
-      font-weight: 600;
-      color: #1d1d1f;
-  }
-  .footer-wrapper ul li{
-      padding: 4px 0;
-  }
-
-  /*Media Query*/
-/* Footer */
-@media (max-width: 768px){
-	.footer-links-wrapper ul {
-		display: none;
-	}
-	.footer-links-wrapper h3 {
-		padding: 10px 0;
-		border-bottom: 1px solid #ccc;
-	}
-	.footer-links-wrapper h3:after {
-		font-family: "FontAwesome";
-		content: "\f067";
-		padding-left: 10px;
-		position: absolute;
-		right: 25px;
-	}
+    color: black;
+    padding: 20px;
+    font-size: 14px;
 }
+.footer-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start; /* Explicitly align items to the start of the flex container */
+    flex-wrap: wrap;
+    gap: 100px;
+}
+
+.footer-column {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start; /* Align column content to the start */
+    flex: 1;
+    min-width: 300px;
+    margin-bottom: 20px;
+    padding: 0 15px;
+}
+
+
+.footer-map iframe {
+    width: 100%;
+    height: 200px; /* Adjustable based on need */
+    border: none;
+}
+
+/* Responsive adjustments */
+@media (max-width: 768px) {
+    .footer-content {
+        flex-direction: column;
+        align-items: center;
+        gap: 20px; /* Adds some space between items in a single column layout */
+    }
+
+    .footer-column, .footer-map {
+        width: 100%; /* Columns take full width on smaller screens */
+        padding: 0; /* Resets padding for smaller screens */
+    }
+}
+
+/* Icon and text styling */
+.footer-column a {
+    display: flex;
+    align-items: center;
+    color: #515154;
+    text-decoration: none;
+}
+
+.footer-column i {
+    margin-right: 10px;
+}
+
+/* Adjust icon sizes and colors as needed */
+.fa-phone { color: rgb(49, 173, 49); }
+.fa-envelope { color: #3893d4; }
+.fa-map-marker-alt{color: #1d0808;  }
